--- a/css/style.css
+++ b/css/style.css
@@ -108,15 +108,13 @@ li {
 }
 
 .partition .center-wrap {
-  display: flex;
-  justify-content: space-between;
   padding: 0px;
-  margin: 5px auto;
+  max-width: 1150px;
 }
 
-.partition {
-  max-width: 1160px;
-  padding: 0px 10%;
+.two-partition {
+  display: flex;
+  justify-content: space-between;
 }
 
 .partition__section h3 {
@@ -228,7 +226,7 @@ hr {
   margin: auto;
 }
 
-.conteiner {
+.hover-button {
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
