--- a/css/style.css
+++ b/css/style.css
@@ -227,10 +227,9 @@ hr {
 }
 
 .hover-button {
-  max-width: 1100px;
-  margin: 0 auto;
   display: flex;
   justify-content: space-around;
+  margin-bottom: 10%;
 }
 
 .button {
@@ -254,9 +253,7 @@ hr {
 }
 
 .footer {
-  max-width: 1350px;
   padding: 1% 0px;
-  margin: 5% auto;
   background-color: #f0f0f0;
 }
 
